--- a/style.css
+++ b/style.css
@@ -236,3 +236,26 @@ button svg {
 
 }
 
+@media (max-width: 392px) {
+
+
+    .container .card {
+
+        background: white;
+    
+        max-width: 392px;
+        max-height: 790px;
+
+        width: 98%;
+        
+        
+    
+        border-radius: 15px;
+    
+        display: flex;
+        position: relative;
+    }
+
+
+
+}
