--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ body {
     max-width: 646px;
     max-height: 504px;
 
-    width: 70%;
-    height: auto;
+    width: 100%;
+    height: 100%;
 
     border-radius: 15px;
 
