--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ font-family: 'Montserrat', sans-serif;
 
 body {
 
-    background: var(--bg-color);
+    background: var(--dark-grey);
 }
 
 .container {
