--- a/style.css
+++ b/style.css
@@ -26,20 +26,16 @@ font-family: 'Montserrat', sans-serif;
 
 body {
 
-    background: var(--dark-grey);
+    background: var(--bg-color);
 }
 
 .container {
 
 
     margin-top: calc(50vh - 25vh);
-
     display: flex;
     justify-content: center;
-    align-items: center;
 
-    /* width: 100%; */
-    /* height: 100%; */
 
 }
 
